@@ -3,9 +3,11 @@ package com.barbershop.citas.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // Import agregado
+import org.springframework.security.crypto.password.PasswordEncoder;     // Import agregado
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -16,16 +18,24 @@ import java.util.List;
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-	@Value("${app.cors.allowed-origins}")
+
+    @Value("${app.cors.allowed-origins}")
     private String allowedOrigins;
-	
-	@Bean
+
+    // --- NUEVO BEAN AGREGADO ---
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+    // ---------------------------
+
+    @Bean
     public SecurityFilterChain securityFilterChain(org.springframework.security.config.annotation.web.builders.HttpSecurity http) throws Exception {
         http
             .cors(Customizer.withDefaults()) // habilita CORS usando el bean de abajo
             .csrf(csrf -> csrf.disable()) // desactiva CSRF
             .authorizeHttpRequests(auth -> auth
-                .anyRequest().permitAll() // permite todas las rutas (ajusta según necesites)
+                .anyRequest().permitAll() // permite todas las rutas
             );
 
         return http.build();
@@ -34,10 +44,16 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        // Asegúrate de que allowedOrigins no sea null en tu application.properties
+        if (allowedOrigins != null) {
+            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        } else {
+            config.setAllowedOrigins(List.of("*")); // Fallback por si la propiedad falla
+        }
+        
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true); // útil si usas JWT o sesiones
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
